--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
   "extends": "airbnb-base",
   "rules": {
-    "no-underscore-dangle":"off",
+    "no-underscore-dangle": ["error",{"allow":["_id"]}],
     "no-unused-vars": "warn",
     "semi": "warn",
     "eol-last": "warn",
