--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,6 @@
 {
   "extends": "airbnb-base",
   "rules": {
-    "no-underscore-dangle": ["error",{"allow":["_id"]}],
-    "no-unused-vars": "warn",
-    "semi": "warn",
-    "eol-last": "warn",
-    "no-console": "off",
-    "import/no-extraneous-dependencies": "off",
-    "comma-dangle": "off",
-    "object-curly-spacing": "warn"
+    "no-underscore-dangle": ["error",{"allow":["_id"]}]
   }
 }
