--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon app.js",
     "start": "node app.js"
   },
-  "author": "",
+  "author": "Anton Knyazev",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.49.0",
@@ -17,7 +17,6 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mongoose": "^7.5.2"
   }
